@startuml
'https://plantuml.com/class-diagram
class Game {
}
class AbstractAircraft {
    -shootStrategy:ShootStrategy
    +setShootStrategy(ShootStrategy shootStrategy):void
    +executeStrategy(AbstractAircraft abstractAircraft):List<AbstractBullet>
}

interface ShootStrategy {
    +shoot(AbstractAircraft abstractAircraft):List<AbstractBullet>
}

class EnemyShoot {
    -direction:int
    +shoot(AbstractAircraft abstractAircraft):List<AbstractBullet>
}
class SprayShoot {
    -direction:int
    +shoot(AbstractAircraft abstractAircraft):List<AbstractBullet>
}
class StraightShoot {
    -direction:int
    +shoot(AbstractAircraft abstractAircraft):List<AbstractBullet>
}
AbstractAircraft <.. Game
AbstractAircraft o--> ShootStrategy
ShootStrategy <|.. EnemyShoot
ShootStrategy <|.. SprayShoot
ShootStrategy <|.. StraightShoot
@enduml